[gd_scene load_steps=13 format=3 uid="uid://di1vp13p4ho1r"]

[ext_resource type="Theme" uid="uid://bylbyy3q0yish" path="res://Assets/Theme.tres" id="1_21iga"]
[ext_resource type="Script" path="res://Game/UI/diedmenu/died_menu.gd" id="2_a2ywm"]
[ext_resource type="AudioStream" uid="uid://brlbovi2rgf3h" path="res://Assets/SFX/Submit.wav" id="3_8h3pd"]
[ext_resource type="AudioStream" uid="uid://dwgk2d86iok67" path="res://Assets/SFX/PlayClick.wav" id="3_71gcu"]
[ext_resource type="AudioStream" uid="uid://c180bq2nldbwv" path="res://Assets/SFX/LeaderboardClick.wav" id="4_aegdl"]
[ext_resource type="AudioStream" uid="uid://cberkywu6b736" path="res://Assets/SFX/Lose.wav" id="6_vd7fi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epg7p"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_klqf5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Retry Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Retry Button/AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Main Menu Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/Main Menu Button/AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer/Submit Button/AudioStreamPlayer2D:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_icwb2"]
resource_name = "main_pressed"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Main Menu Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Main Menu Button/AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g2fop"]
resource_name = "retry_pressed"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Retry Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Retry Button/AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3kfil"]
resource_name = "submit_pressed"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Submit Button/AudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ry1ct"]
_data = {
"RESET": SubResource("Animation_klqf5"),
"main_pressed": SubResource("Animation_icwb2"),
"retry_pressed": SubResource("Animation_g2fop"),
"submit_pressed": SubResource("Animation_3kfil")
}

[node name="DiedMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -62.0
offset_right = 70.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_21iga")
script = ExtResource("2_a2ywm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_epg7p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Game Over" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreTextLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreValueLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "000000000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "NAME"
alignment = 1
max_length = 3

[node name="Submit Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Submit Score"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="VBoxContainer/Submit Button"]
stream = ExtResource("3_8h3pd")

[node name="Retry Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Retry"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="VBoxContainer/Retry Button"]
stream = ExtResource("3_71gcu")

[node name="Main Menu Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="VBoxContainer/Main Menu Button"]
stream = ExtResource("4_aegdl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ry1ct")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_vd7fi")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Submit Button" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Retry Button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu Button" to="." method="_on_main_menu_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
